Fixed seven segment sizing glitch on mobile

--- a/apps/bitcoin-clock/styles.css
+++ b/apps/bitcoin-clock/styles.css
@@ -77,4 +77,8 @@ main
         margin-right: 20px;
     }
     
+    .halvingTimers div
+    {
+        height: 47px;
+    }
 }
